added calender icon to select element

--- a/css/_main_panel.css
+++ b/css/_main_panel.css
@@ -12,6 +12,11 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 2rem;
 }
+.header-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .btn {
   color: rgb(142, 142, 170);
@@ -30,10 +35,15 @@
   border-radius: 0 3px 3px 0;
 }
 .select-btn {
+  display: flex;
+  align-items: center;
+  padding: 0.4rem;
   margin-left: 0.8rem;
 }
-.select-btn option::before {
-  content: '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16"><path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/></svg>';
+#select {
+  outline: none;
+  border: none;
+  color: rgb(142, 142, 170);
 }
 
 .line {
