--- a/css/_main_panel.css
+++ b/css/_main_panel.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 95%;
+  width: 100%;
   height: auto;
 }
 
@@ -49,7 +49,7 @@
   border: none;
   color: rgb(142, 142, 170);
 }
-
+/* 
 .line {
   width: 95%;
-}
+} */
