--- a/css/_reset.css
+++ b/css/_reset.css
@@ -1,10 +1,14 @@
 *,
 *::after,
-*::before{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+*::before {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
-body{
-    font-size: 62.5%;
+html {
+  font-size: 62.5%;
+}
+body {
+  width: 100%;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
