--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 @import url(./_tableCss.css);
 
 .contaner {
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: space-between;
+  align-items: center;
 }
